# kaggle

./: .gitignore  README.md  categorical.ipynb  kaggle.ipynb  kaggle.py  missing_vals.ipynb  pyproject.toml
1-home-data/: compare_submissions.ipynb  comperik.ipynb  erik-train-price.csv  erik_all.csv  erik_test.csv  erik_train.csv  eriks-lasso-predictions.csv  eriks-xgb-predictions.csv  fix_hpo.ipynb  house-prices-lasso-xgboost-and-a-detailed-eda.Rmd  hpo_scores.json  inflation.json  inflation.py  mike_all.csv  mike_train.csv  mikes-elastic-net-predictions.csv  mikes-lasso-predictions.csv  mikes-lgb-predictions.csv  mikes-ridge-predictions.csv  mikes-svr-predictions.csv  mikes-xgb-predictions-with-erik-data.csv  mikes-xgb-predictions.csv  optimize-gbr-custom.py  pipeline.ipynb  plan.md  submission-erik.csv  submission.csv  talk2me.ipynb  train-withPlan.xlsx  ~$train-withPlan.xlsx
data-dump/: README.md  db-portal.yml  generate_env.py
data-dump/api/: Dockerfile  db.py  log.py  server.py
data-dump/mongo-express/: Dockerfile
hpo/: analysis.ipynb
